clients/web/kubernetes_deployment/yaml/basic_ingress.yaml
# %YAML 1.2

# Filename: basic_ingress.yaml
# Created: April 10, 2018
# Modified: 
# Author: J. Benjamin Leeds
# License: None

# Use this manifest to create an Ingress service on a Google Container Enginer Kubernetes Cluster
# The service is a Google Compute Engine HTTP(S) Load Balancer
# Reference: https://cloud.google.com/compute/docs/load-balancing/http/

# HTTP requests use port 80, HTTPS requests use port 443

# define TLS secret
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     run: alnw-deployment
#   name: alnw-deployment
#   namespace: default
#   resourceVersion: "610"
#   selfLink: /api/v1/namespaces/default/services/alnw-deployment
# spec:
#   clusterIP: 10.55.246.57
#   externalTrafficPolicy: Cluster
#   ports:
#   - nodePort: 32494
#     port: 80
#     protocol: TCP
#     targetPort: 80
#   selector:
#     run: alnw-deployment
#   sessionAffinity: None
#   type: LoadBalancer
#   tls:
#   - secretName: test-ingress-secret
#   backend:
#     serviceName: kubernetes
#     servicePort: 80

# status:
#   loadBalancer:
#     ingress:
#     - ip: 35.185.212.85

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alnw-deployment
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - secretName: test-ingress-secret                   
  backend:
    serviceName: alnw-deployment     
    servicePort: 80  
# spec:
#   clusterIP: 10.55.246.57
#   externalTrafficPolicy: Cluster
#   ports:
#   - nodePort: 32494
#     port: 80
#     protocol: TCP
#     targetPort: 80
#   selector:
#     run: alnw-deployment
#   sessionAffinity: None
#   type: LoadBalancer
#   tls:
#   - secretName: test-ingress-secret
#   backend:
#     serviceName: kubernetes
#     servicePort: 80

# status:
#   loadBalancer:
#     ingress:
#     - ip: 35.185.212.85
